--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,178 @@ body.open .navbar-menu {
 .typed-cursor {
   font-size: 40px; 
 }
+
+
+
+.wrapper{
+  max-width: 1080px;
+  margin: 50px auto;
+  padding: 0 20px;
+  position: relative;
+}
+.wrapper .center-line{
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  background: #fff;
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+}
+.wrapper .row{
+  display: flex;
+}
+.wrapper .row-1{
+  justify-content: flex-start;
+}
+.wrapper .row-2{
+  justify-content: flex-end;
+}
+.wrapper .row section{
+  background: #19191c;
+  border-radius: 5px;
+  width: calc(50% - 40px);
+  padding: 20px;
+  position: relative;
+}
+.wrapper .row section::before{
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  top: 28px;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+.row-1 section::before{
+  right: -7px;
+}
+.row-2 section::before{
+  left: -7px;
+}
+.row section .icon,
+.center-line .scroll-icon{
+  position: absolute;
+  background: #f2f2f2;
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #22d467;
+  font-size: 17px;
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
+}
+.center-line .scroll-icon{
+  bottom: 0px;
+  left: 50%;
+  font-size: 25px;
+  transform: translateX(-50%);
+}
+.row-1 section .icon{
+  top: 25px;
+  right: -50px;
+}
+.row-2 section .icon{
+  top: 25px;
+  left: -50px;
+}
+.row section .details,
+.row section .bottom{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.row section .details .title{
+  font-size: 18px;
+  font-weight: 600;
+}
+
+@media (max-width: 440px) {
+
+  .row section .details .title{
+    font-size: 14px;
+  }
+}
+
+.row section p{
+  margin: 10px 0 17px 0;
+}
+.row section .bottom a{
+  text-decoration: none;
+  background: #22c55e;
+  color: #fff;
+  padding: 7px 15px;
+  border-radius: 5px;
+  /* font-size: 17px; */
+  /* font-weight: 400; */
+  transition: all 0.3s ease;
+}
+.row section .bottom a:hover{
+  transform: scale(0.97);
+}
+@media (max-width: 790px) {
+  .wrapper .center-line {
+    left: auto;
+    right: 40px; /* Ajusta la posición a la derecha */
+    transform: none; /* Elimina la transformación */
+  }
+
+  .wrapper .row {
+    margin: 30px 60px 3px 0; /* Ajusta el margen para centrar */
+  }
+
+  .row-1 section::before {
+    right: -7px; /* Ajusta la posición del triángulo */
+  }
+
+  .row-1 section .icon {
+    right: -50px; /* Ajusta la posición del icono */
+  }
+
+  .wrapper .center-line {
+    left: 40px; /* Ajusta la posición a la izquierda */
+  }
+
+  .wrapper .row {
+    margin: 30px 0 3px 60px; /* Ajusta el margen para centrar */
+  }
+
+  .wrapper .row section {
+    width: 100%;
+  }
+
+  .row-1 section::before {
+    left: -7px; /* Ajusta la posición del triángulo */
+  }
+
+  .row-1 section .icon {
+    left: -50px; /* Ajusta la posición del icono */
+  }
+}
+
+@media (max-width: 340px) {
+  .wrapper .center-line,
+  .row section::before,
+  .row section .icon {
+    display: none;
+  }
+
+  .wrapper .row {
+    margin: 10px 0;
+  }
+
+}
+
+.container-sphere {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.m-sphere-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
