--- a/src/index.css
+++ b/src/index.css
@@ -274,17 +274,17 @@ header{
 	border-radius: 5px;
 }
 .timeline-content h3{
-    font-size: 20px;
+    /* font-size: 20px;
 	color: #ffffff;
 	margin:0 0 10px;
 	text-transform: capitalize;
-	font-weight: 500;
+	font-weight: 500; */
 }
 .timeline-content p{
-    color: #c8c8c8;
+    /* color: #c8c8c8;
 	font-size: 16px;
 	font-weight: 300;
-	line-height: 22px;
+	line-height: 22px; */
 }
 
 /* responsive */
