--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+::-webkit-scrollbar {
+  width: 8px;
+  transition: all 0.3s ease-in-out; 
+}
+
+
+
+::-webkit-scrollbar-thumb {
+  background-color: #16C55EFF;
+  border-radius: 10px;
+}
+
+
 *{
   margin: 0;
   padding: 0;
